Updated Blog section

--- a/CSBlog.html
+++ b/CSBlog.html
@@ -75,6 +75,16 @@
                     <img src="./images/mapCode.png" alt="mapCode" id="mapCodeSnap">
                 </div>
             </div>
+            <div class="vocab-section">
+              <h1>Here are some vocabulary words to look out for!</h1>
+                <ul>
+                  <li><p>Props: Props initially stand for "Properties". Props are arguments passed into React components.Props are passed to components via HTML attributes.</p></li>
+                  
+                  <li><p>Destructuring: We may have an array or object that we are working with, but we only need some of the items contained in these. Destructuring makes it easy to extract only what is needed.</p></li>
+                  
+                  <li><p>Router: A router is used in order to create multiple pages that can be accessible withing a website, in this case react imports a router that can be used across all websites.</p></li>
+                </ul>
+            </div>
         </div>
     </main>
 
