--- a/standUp.html
+++ b/standUp.html
@@ -103,10 +103,10 @@
         <div class="container myFooter">
             <h1 class="secondary-clr">Check out my links!</h1>
             <ul class="icon-list accent-clr">
-            <li><i class="fa-solid fa-envelope"></i></li>
-            <li><i class="fa-brands fa-linkedin"></i></li>
-            <li><i class="fa-brands fa-github"></i></li>
-            <li><i class="fa-brands fa-instagram"></i></li>
+                <li><a href="mailto:infanteangel.ag@gmail.com"><i class="fa-solid fa-envelope"></i></a></li>
+                <li><a href="www.linkedin.com/in/angel-infante-352a4b275" target="_blank"><i class="fa-brands fa-linkedin"></i></a></li>
+                <li><a href="https://github.com/InfanteAngel" target="_blank"><i class="fa-brands fa-github"></i></a></li>
+                <li><a href=""><i class="fa-brands fa-instagram"></i></a></li>
             </ul>
         </div>
     </footer>
