--- a/index.html
+++ b/index.html
@@ -110,6 +110,10 @@
         </div>
       </div>
 
+      <div class="myDivBlock">
+
+      </div>
+
       <footer id="myFooter">
             <div class="container myFooter">
               <h1 class="secondary-clr">Check out my links!</h1>
