--- a/standUp.html
+++ b/standUp.html
@@ -97,6 +97,9 @@
                 </div>
             </div>
         </div>
+        <div class="divBlock2">
+
+        </div>
     </main>
 
         <footer>
