--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <div class="inner-grid">
           <div class="title-box">
             <p class="img-txt title-text accent-clr">
-              Hello! <span id="hand">👋</span> My names is Angel Infante
+              Hello! <span id="hand">👋</span> My name is Angel Infante
             </p>
             <p class="img-txt bottom-text text-clr">
               I love helping other in any way that I can. When faced with a
