updated stand up page

--- a/standUp.html
+++ b/standUp.html
@@ -61,6 +61,10 @@
             <p class="accent-clr">My Tools</p>
             <br>
             <h2 class="accent-clr primary-font">Here is a small list of the tools I have been using during my sprint of January 2024!</h2>
+            <h2 class="accent-clr primary-font">For this project I am working on a Personal Freelance Website called TlaxTech!</h2>
+            <h2 class="accent-clr primary-font">Check out my canva draft page! <a href="https://www.canva.com/design/DAF559bbKL0/7G9XEwSsKaiCZDnxR5a9bg/edit?utm_content=DAF559bbKL0&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton">Here</a></h2>
+            <img src="./images/Add a heading.png" alt="tlax page" id="tlax-page">
+            
             <br>
             <div class="tools-list">
                 <div class="tools-grid">
