--- a/index.html
+++ b/index.html
@@ -68,10 +68,9 @@
             </p>
             <p class="img-txt bottom-text text-clr">
               I love helping other in any way that I can. When faced with a
-              problem I always find a solution one way ot another. I aspire to
-              make everyone's day a bit better, and with my set of skills,
-              creating websites in order to fulfill that joy was my calling.
-              🌟☄️
+              problem I always find a solution one way or another. I aspire to
+              make everyone's day a bit better, and with my set of skills
+              creating websites was my calling🌟☄️
             </p>
           </div>
           <div>
@@ -119,7 +118,7 @@
               <h1 class="secondary-clr">Check out my links!</h1>
               <ul class="icon-list accent-clr">
                 <li><a href="mailto:infanteangel.ag@gmail.com"><i class="fa-solid fa-envelope"></i></a></li>
-                <li><a href="www.linkedin.com/in/angel-infante-352a4b275" target="_blank"><i class="fa-brands fa-linkedin"></i></a></li>
+                <li><a href="https://www.linkedin.com/in/angel-infante-352a4b275/" target="_blank"><i class="fa-brands fa-linkedin"></i></a></li>
                 <li><a href="https://github.com/InfanteAngel" target="_blank"><i class="fa-brands fa-github"></i></a></li>
                 <li><a href=""><i class="fa-brands fa-instagram"></i></a></li>
               </ul>
