--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
               Hello! <span id="hand">👋</span> My name is Angel Infante
             </p>
             <p class="img-txt bottom-text text-clr">
-              I love helping other in any way that I can. When faced with a
+              I love helping others in any way I can. When faced with a
               problem I always find a solution one way or another. I aspire to
               make everyone's day a bit better, and with my set of skills
               creating websites was my calling🌟☄️
