Updated Blog Page

--- a/CSBlog.html
+++ b/CSBlog.html
@@ -1,17 +1,23 @@
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Readex+Pro&display=swap" rel="stylesheet">
-    <script src="https://kit.fontawesome.com/488766d18c.js" crossorigin="anonymous"></script>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Readex+Pro&display=swap"
+      rel="stylesheet"
+    />
+    <script
+      src="https://kit.fontawesome.com/488766d18c.js"
+      crossorigin="anonymous"
+    ></script>
     <title>CS Blog</title>
-</head>
-<body class="background-clr primary-font">
-<header>
+  </head>
+  <body class="background-clr primary-font">
+    <header>
       <div>
         <nav id="primary-nav">
           <div class="navbar">
@@ -54,51 +60,180 @@
     </header>
 
     <main>
-        <div class="top-section container grid-col">
-            <div class="blog-img">
-                <img src="./images/blogIMG.jpg" alt="computer Images" id="blog-image">
-            </div>
-            <div>
-                <h1>Computer Science Blog</h1>
-            </div>
+      <div class="top-section container grid-col">
+        <div class="blog-img">
+          <img
+            src="./images/blogIMG.jpg"
+            alt="computer Images"
+            id="blog-image"
+          />
         </div>
+        <div>
+          <h1>Computer Science Blog</h1>
+        </div>
+      </div>
 
-        <div class="week2Blog container">
-            <h1>Second Week</h1>
-            <h2>Todays Topic: React and .map function</h2>
-            <br>
-            <div class="grid-col">
-                <div class="blog-text-box">
-                    <p>This week, I was learning how to loop through react components. I ended up learning easier ways in order to deconstruct our list of items in order to utilize the across the whole site. I learned how to also make our react components a lot more dynamic and that way make it a lot easier to edit and move around. I also learned about using a .map function in order to loop through my list of items and display them. I struggled with the .map function, I wanted to just display a certain element from my list of items. I found it interesting the way that react itself utilizes this function in order to make our website a lot mroe dynamic, we are able to display bunch of lines of code just by using a .map function which can be something I could use in order to create an infinite website.</p>
-                </div>
-                <div>
-                    <img src="./images/mapCode.png" alt="mapCode" id="mapCodeSnap">
-                </div>
-            </div>
-            <div class="vocab-section">
-              <h1>Here are some vocabulary words to look out for!</h1>
-                <ul>
-                  <li><p>Props: Props initially stand for "Properties". Props are arguments passed into React components.Props are passed to components via HTML attributes.</p></li>
-                  
-                  <li><p>Destructuring: We may have an array or object that we are working with, but we only need some of the items contained in these. Destructuring makes it easy to extract only what is needed.</p></li>
-                  
-                  <li><p>Router: A router is used in order to create multiple pages that can be accessible withing a website, in this case react imports a router that can be used across all websites.</p></li>
-                </ul>
-            </div>
+      <div class="week2Blog container">
+        <h1>Jan 10 - Jan 19</h1>
+        <h2>Todays Topic: React and .map function</h2>
+        <br />
+        <div class="grid-col">
+          <div class="blog-text-box">
+            <p>
+              This week, I was learning how to loop through react components. I
+              ended up learning easier ways in order to deconstruct our list of
+              items in order to utilize the across the whole site. I learned how
+              to also make our react components a lot more dynamic and that way
+              make it a lot easier to edit and move around. I also learned about
+              using a .map function in order to loop through my list of items
+              and display them. I struggled with the .map function, I wanted to
+              just display a certain element from my list of items. I found it
+              interesting the way that react itself utilizes this function in
+              order to make our website a lot more dynamic, we are able to
+              display bunch of lines of code just by using a .map function which
+              can be something I could use in order to create an infinite
+              website.
+            </p>
+          </div>
+          <div>
+            <img src="./images/mapCode.png" alt="mapCode" id="mapCodeSnap" />
+          </div>
         </div>
+        <div class="vocab-section">
+          <h1>Here are some vocabulary words to look out for!</h1>
+          <ul>
+            <li>
+              <p>
+                Props: Props initially stand for "Properties". Props are
+                arguments passed into React components.Props are passed to
+                components via HTML attributes.
+              </p>
+            </li>
+
+            <li>
+              <p>
+                Destructuring: We may have an array or object that we are
+                working with, but we only need some of the items contained in
+                these. Destructuring makes it easy to extract only what is
+                needed.
+              </p>
+            </li>
+
+            <li>
+              <p>
+                Router: A router is used in order to create multiple pages that
+                can be accessible withing a website, in this case react imports
+                a router that can be used across all websites.
+              </p>
+            </li>
+          </ul>
+        </div>
+      </div>
+      <div class="week2Blog container">
+        <h1>Jan 22 - Jan 16</h1>
+        <h2>
+          Todays Topic: Exporting and Importing React Variables/Components
+        </h2>
+        <br />
+        <div class="grid-col">
+          <div class="blog-text-box">
+            <p>
+              This week was full of exciting new discoveries and great concepts
+              that I will be able to utilize later in the future. The main
+              highlight of this week was a very important concept in react:
+              Importing and Exporting. This "Exporting and Importing" is the
+              ability to reuse any from of data/components created as seprate
+              files. This makes your website a lot more dynamic all across your
+              code, begin able to simply create components/reusable elements
+              like a "footer", "NavBar", "Block", or even "Paragraphs". You want
+              to give access to the other files by exporting your file as seen
+              on the image to the right where we are exporting "contactContent".
+              On our second image we can observe how we are importing
+              "contactContent" from our contact page file. Then at the bottom we
+              see us using map in order to loop through the information and
+              display it. Same applies to the last image, where we Imported
+              "navItems" and then utilized them through out our Navbar.
+            </p>
+            <br />
+            <p>
+              I learned how to Import, Export and utilize the content by using
+              props and deconstructing the list like "contactContent". I was
+              struggling on how to even give access of my list to the other
+              files and make sure that they were in scope in order to utilize
+              them in that same file. As of now, I would like to get more
+              familiar with the Exporting and Importing process, due to the
+              reason that it is pretty new to me, but I am sure that there has
+              to be an easier and more simpler way to get this done.
+            </p>
+          </div>
+          <div>
+            <img
+              src="./images/Exporting React.png"
+              alt="mapCode"
+              id="ExportingReact"
+            />
+          </div>
+        </div>
+        <div class="grid-col">
+          <img src="./images/Importing Itesm.png" alt="ImportingItems" />
+          <img src="./images/utilizing import.png" alt="UtilizingImport" />
+        </div>
+        <div class="vocab-section">
+          <h1>Here are some vocabulary words to look out for!</h1>
+          <ul>
+            <li>
+              <p>
+                Exporting: The export statement makes live bindings from a
+                specific file available everywhere else.
+              </p>
+            </li>
+
+            <li>
+              <p>
+                Importing: Other files can load the values in these live
+                bindings using the import statement.
+              </p>
+            </li>
+
+            <li>
+              <p>
+                CallBack: The useCallBack function returns a memorized function
+                that can be utilized. Think of memoization as caching a value so
+                that it does not need to be recalculated.
+              </p>
+            </li>
+          </ul>
+        </div>
+      </div>
     </main>
 
     <footer>
-    <div class="container myFooter">
+      <div class="container myFooter">
         <h1 class="secondary-clr">Check out my links!</h1>
         <ul class="icon-list accent-clr">
-                <li><a href="mailto:infanteangel.ag@gmail.com"><i class="fa-solid fa-envelope"></i></a></li>
-                <li><a href="www.linkedin.com/in/angel-infante-352a4b275" target="_blank"><i class="fa-brands fa-linkedin"></i></a></li>
-                <li><a href="https://github.com/InfanteAngel" target="_blank"><i class="fa-brands fa-github"></i></a></li>
-                <li><a href=""><i class="fa-brands fa-instagram"></i></a></li>
+          <li>
+            <a href="mailto:infanteangel.ag@gmail.com"
+              ><i class="fa-solid fa-envelope"></i
+            ></a>
+          </li>
+          <li>
+            <a
+              href="www.linkedin.com/in/angel-infante-352a4b275"
+              target="_blank"
+              ><i class="fa-brands fa-linkedin"></i
+            ></a>
+          </li>
+          <li>
+            <a href="https://github.com/InfanteAngel" target="_blank"
+              ><i class="fa-brands fa-github"></i
+            ></a>
+          </li>
+          <li>
+            <a href=""><i class="fa-brands fa-instagram"></i></a>
+          </li>
         </ul>
-    </div>
-</footer>
+      </div>
+    </footer>
     <script src="./script.js"></script>
-</body>
+  </body>
 </html>
